# codeba-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.ps1
ATENÇÃO - ABRIR ANTES DE RODAR O PROGRAMA/: AJUSTES A SE FAZER.txt
docs/: ajustes.md  automacao.md  dados-openport.md  erros.md  guia.md  ideia.md  memory.md  plano_correcao.md
logs/: .gitkeep
scratch/: check_volume.py  check_volume_pure.py  examine_db.py  examine_excel_nickel.py  fast_xlsx_search.py  find_niquel_files.py  find_rpj.py  read_transcript.py  run_all_tests.py  run_e2e_tests.py  run_unit_tests.py  search_all_fixtures.py  search_rpj_wildcard.py
scripts/: rpa_codeba.py
scripts/diagnostics/: analyze_excel.py  diag_dates.py  diag_dates2.py  diag_fix.py  diag_pdf_grande.py  diagnostic.py  parse_result.py
src/: __init__.py  app.py  config.py  logging_config.py
src/services/: __init__.py  analytics.py  excel_parser.py  executive_report.py  pdf_parser.py  persistence.py  post_processing.py  reconciliation.py  report_generator.py
src/utils/: __init__.py  cleaners.py  file_utils.py  filename_parser.py
static/: index.html
static/css/: responsive.css  style.css
static/js/: analytics.js  app.js  charts.js  history.js
temp_uploads/: .gitkeep
tests/: __init__.py  conftest.py  test_analytics.py  test_date_typo.py  test_deduplication.py  test_e2e.py  test_history_hint.py  test_incomplete_weighings.py  test_integrity.py  test_persistence.py  test_recorte_aviso.py  test_report.py  test_report_generation.py  test_sev_rendering.py
tests/fixtures/: generate.py  (+1 more)
