[project]
name = "codeba-auditoria"
version = "3.0.0"
description = "Dashboard de Auditoria de Pesagens — CODEBA (Excel vs OpenPort)"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pandas==2.2.2",
    "openpyxl==3.1.2",
    "pdfplumber==0.11.0",
    "python-multipart==0.0.9",
    "reportlab>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "requests>=2.31",
    "ruff>=0.4",
]
rpa = [
    "playwright>=1.44",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
